# stil-test-task

./: Cargo.toml  task_description.txt
src/: client.rs
src/server/: mod.rs  statistics.rs
