[package]
name = "stiltesttask"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3" }
parking_lot = { version = "0.12" }
rand = { version = "0.8" }